--- a/apps/launcher/package.json
+++ b/apps/launcher/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack --port 3002",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 3010",
     "lint": "next lint"
   },
   "dependencies": {
