chore(db): generate prisma client on postinstall

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "generate": "prisma generate",
+    "postinstall": "prisma generate",
     "migrate": "prisma migrate dev --name init"
   }
 } 
