--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,6 +37,7 @@ jobs:
             package.json \
             pnpm-workspace.yaml \
             pnpm-lock.yaml \
+            packages/db \
             apps/*/.next \
             apps/*/public \
             apps/*/package.json \
